# alif_ml-embedded-evaluation-kit

./: .clang-format  .gitignore  .gitmodules  .pylintrc  0001-Add-ethosu_base_pointer_remap.patch  ARM_Readme.md  AUGD0011_ML_Embedded_Evaluation_Kit.md  CMakeLists.txt  CMakePresets.json  Dockerfile  KWS and Image Classification on Dual M55 Cores Draft Note - Shared.docx  ML_Embedded_Evaluation_Kit.md  MlekModule.cmake  Readme.md  alif_img_class_hp.json  alif_kws_he.json  alif_kws_he_e1c.json  alif_obj_detect_hp.json  alif_vww.json  build_commands.txt  build_default.py  download_dependencies.py  inference_demo.json  inference_runner_hp.json  release_notes.txt  set_up_default_resources.py
source/hal/: CMakeLists.txt  hal.c  readme.md
source/hal/cmsis_device/: CMakeLists.txt
source/hal/cmsis_device/include/: RTE_Components.h  cmsis.h  irqs.h
source/hal/cmsis_device/source/: handlers.c  irqs.c
source/hal/components/ethosu_npu_init/: CMakeLists.txt  ethosu_npu_init.c
source/hal/components/ethosu_npu_init/include/: ethosu_npu_init.h
source/hal/components/ethosu_ta_init/: CMakeLists.txt  ethosu_ta_init.c
source/hal/components/ethosu_ta_init/include/: ethosu_ta_init.h
source/hal/components/lcd_mps3/: glcd_mps3.c
source/hal/components/lcd_mps3/include/: font_9x15_h.h  glcd_mps3.h
source/hal/include/: data_acq.h  data_psn.h  hal.h  hal_audio.h  hal_audio_alif.h  hal_config.h  hal_image.h  hal_lcd.h  hal_pmu.h  timer.h
source/hal/platform/mps3/: CMakeLists.txt
source/hal/platform/mps3/cmake/templates/: peripheral_memmap.h.template
source/hal/platform/mps3/include/: device_mps3.h  ethosu_mem_config.h  glcd_mps3.h  platform_drivers.h  smm_mps3.h  timer_mps3.h
source/hal/platform/mps3/source/: device_mps3.c  glcd_mps3.c  platform_drivers.c  timer_mps3.c
source/hal/platform/mps3/source/include/: device_mps3.h  smm_mps3.h
source/hal/platform/native/: CMakeLists.txt
source/hal/platform/native/include/: platform_drivers.h
source/hal/platform/native/source/: platform_drivers.c
source/hal/platform/simple/: CMakeLists.txt
source/hal/platform/simple/cmake/templates/: peripheral_irqs.h.template
source/hal/platform/simple/include/: platform_drivers.h  timer_simple_platform.h
source/hal/platform/simple/include/stubs/: glcd.h
source/hal/platform/simple/source/: platform_drivers.c  stubs_glcd.c  timer_simple_platform.c
source/hal/profiles/bare-metal/bsp/: retarget.c
source/hal/profiles/bare-metal/bsp/include/: bsp.h
source/hal/profiles/bare-metal/data_acquisition/: data_acq.c
source/hal/profiles/bare-metal/data_presentation/: data_psn.c
source/hal/profiles/bare-metal/data_presentation/lcd/: lcd_img.c
source/hal/profiles/bare-metal/timer/: platform_timer.c
source/hal/profiles/bare-metal/timer/include/: platform_timer.h
source/hal/profiles/bare-metal/utils/: system_init.c
source/hal/profiles/native/data_presentation/: data_psn.c
source/hal/profiles/native/data_presentation/log/: log.c
source/hal/profiles/native/utils/: system_init.c
source/hal/profiles/native/utils/include/: system_init.h
source/hal/source/: data_acq.c  hal.c  hal_pmu.c  hal_timer.c
source/hal/source/components/audio/: CMakeLists.txt
source/hal/source/components/audio/include/: audio_data.h  hal_audio.h
source/hal/source/components/audio/source/: hal_audio_static.c  hal_audio_static_external.c  hal_audio_static_external.h
source/hal/source/components/audio_alif/: CMakeLists.txt
source/hal/source/components/camera/: CMakeLists.txt
source/hal/source/components/camera/include/: hal_camera.h
source/hal/source/components/camera/source/: hal_camera_static.c  hal_camera_static_external.c  hal_camera_static_external.h  hal_camera_vsi.c
source/hal/source/components/cmsis_device/: CMakeLists.txt
source/hal/source/components/cmsis_device/include/: RTE_Components.h
source/hal/source/components/image/: CMakeLists.txt
source/hal/source/components/image/include/: image_data.h
source/hal/source/components/lcd/: CMakeLists.txt
source/hal/source/components/lcd/include/: lv_port_disp.h
source/hal/source/components/lcd/source/: glcd.h  lcd_img.c
source/hal/source/components/lvgl_port/: CMakeLists.txt
source/hal/source/components/lvgl_port/include/: lv_port.h
source/hal/source/components/npu/: CMakeLists.txt  ethosu_cpu_cache.c  ethosu_npu_init.c  ethosu_profiler.c
source/hal/source/components/npu/include/: ethosu_cpu_cache.h  ethosu_mem_config.h  ethosu_npu_init.h  ethosu_profiler.h
source/hal/source/components/npu_ta/: CMakeLists.txt  ethosu_ta_init.c
source/hal/source/components/npu_ta/include/: ethosu_ta_init.h
source/hal/source/components/platform_pmu/: CMakeLists.txt
source/hal/source/components/platform_pmu/include/: platform_pmu.h
source/hal/source/components/stdout/: CMakeLists.txt
source/hal/source/components/stdout/include/: user_input.h
source/hal/source/components/stdout/source/: retarget.c  user_input.c
source/hal/source/platform/alif/: CMakeLists.txt
source/hal/source/platform/alif/cmsis-pack/: CMakeLists.txt
source/hal/source/platform/alif/include/: MX66UM2G.h  ospi_flash.h  ospi_ram.h  peripheral_memmap.h  platform_drivers.h  ram_test.h  timer_alif.h  tracelib.h
source/hal/source/platform/alif/services_lib/: CMakeLists.txt
source/hal/source/platform/alif/source/: MX66UM2G.c  delay.c  fault_handler.c  itm_tracelib.c  ospi_flash.c  ospi_flash_is25wx.c  ospi_flash_mx66um2g.c  ospi_ram_aps512xx.c  ospi_ram_hyper16.c  ospi_ram_is66.c  ospi_ram_is66_o16.c  ospi_ram_is66_o8.c  platform_drivers.c  ram_test.c  retarget_alif.c  timer_alif.c  tracelib.c  uart_tracelib.c
source/hal/source/platform/ensemble/: CMakeLists.txt
source/hal/source/platform/ensemble/cmsis-pack/: AlifSemiconductor.Ensemble.pdsc  CMakeLists.txt
source/hal/source/platform/ensemble/include/: fault_handler.h  itm_tracelib.h  ospi_flash.h  (+5 more)
source/hal/source/platform/mps3/: CMakeLists.txt
source/hal/source/platform/mps4/: CMakeLists.txt  readme.md
source/hal/source/platform/native/: CMakeLists.txt
source/hal/source/platform/simple/: CMakeLists.txt
(+742 files in other folders)
